<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.Register"
    android:background="@mipmap/splash2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--image logo-->
            <ImageView
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="22dp"
                android:src="@mipmap/logo" />

            <!--user name -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="160dp"
                android:src="@mipmap/username" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="150dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!--phone number -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/layout_userName"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/phone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/layout_userName"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!--Email -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_mobile"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_mobile"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!-- naked name -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_email"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/username" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_nakedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_email"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_nakedName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nakedName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!--company-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_nakedName"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/company" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_nakedName"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/companyName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!--password -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_company"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_company"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_register_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!--Confirm password -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_password"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_password"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp">

                <EditText
                    android:id="@+id/et_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/layout_confirmPassword"
                android:layout_marginStart="150dp"
                android:layout_marginTop="100dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="register"
                android:text="@string/register" />

            <TextView
                android:id="@+id/haveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/register"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="100dp"
                android:onClick="finish"
                android:text="@string/haveAccount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/haveAcc"
                android:layout_alignTop="@+id/haveAcc"
                android:layout_marginStart="130dp"
                android:onClick="finish"
                android:text="@string/login"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>