<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_rate"
    android:background="@mipmap/bg_bill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/drawer_icon"
                android:src="@mipmap/menue"
                android:layout_marginTop="22dp"
                android:layout_marginStart="22dp"
                android:onClick="openDrawer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/drawer_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/billAfterDis"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/backrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/arrow2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:onClick="backRow"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="81dp"
            android:src="@mipmap/add_ratings"
            android:id="@+id/rate_Image"/>

        <ImageView
            android:id="@+id/rate_excellent"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/excellent"
            android:layout_below="@+id/rate_Image"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:onClick="statuse"/>

        <TextView
            android:id="@+id/excellent_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rate_excellent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/excellent"
            android:onClick="statuse" />

        <ImageView
            android:id="@+id/rate_good"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/good2"
            android:layout_below="@id/rate_Image"
            android:layout_alignStart="@+id/rate_excellent"
            android:layout_marginStart="130dp"
            android:layout_marginTop="32dp"
            android:onClick="statuse"/>

        <TextView
            android:id="@+id/good_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/rate_excellent"
            android:layout_below="@+id/rate_good"
            android:layout_marginStart="130dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/good"
            android:onClick="statuse"/>

        <ImageView
            android:id="@+id/rate_bad"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/bad"
            android:layout_below="@id/rate_Image"
            android:layout_alignStart="@+id/rate_good"
            android:layout_marginStart="130dp"
            android:layout_marginTop="32dp"
            android:onClick="statuse"/>

        <TextView
            android:id="@+id/bad_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/rate_good"
            android:layout_below="@+id/rate_bad"
            android:layout_marginStart="130dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/bad"
            android:onClick="statuse"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#8396b1"
            android:layout_below="@id/rate_good"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/layout_editText"
            android:padding="8dp">
            <EditText
                android:id="@+id/rate_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addComment"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_below="@+id/layout_editText"
            android:layout_marginTop="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/send"
            android:textColor="#000"
            android:textSize="14sp"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/navigation_rate"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        android:background="@mipmap/sidebar"
        app:headerLayout="@layout/navigation_header"
        />

</android.support.v4.widget.DrawerLayout>



